remove usage of getFirst()